@@ -1,3 +1,13 @@
+2006-06-06  Michael Natterer  <mitch@gimp.org>
+
+	* app/tools/gimpnewrectselecttool.c
+	(gimp_new_rect_select_tool_cancel)
+	(gimp_new_rect_select_tool_rectangle_changed): flush the image
+	after changing it.
+
+	* app/tools/gimprectangletool.c (gimp_rectangle_tool_halt): don't
+	flush it here.
+
 2006-06-06  Sven Neumann  <sven@gimp.org>
 
 	* app/actions/select-commands.c: minor cleanup.
